--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
+  host: db
   port: 5432
   username: postgres
   password: password
@@ -27,7 +27,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-  #<<: *default
+  <<: *default
   # database: XpressPro_development
   # adapter: postgresql
   # encoding: unicode
@@ -37,7 +37,7 @@ development:
   # password: password
   # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-  url: postgres://xpresspro_development3_ae0m_user:EDgcwRDRzALLH6myWQot21P1YAoW2eIS@dpg-cluil7da73kc73bhi560-a.oregon-postgres.render.com/xpresspro_development3_ae0m
+  # url: postgres://xpresspro_development3_ae0m_user:EDgcwRDRzALLH6myWQot21P1YAoW2eIS@dpg-cluil7da73kc73bhi560-a.oregon-postgres.render.com/xpresspro_development3_ae0m
 
 
   # The specified database role being used to connect to postgres.
